Colaboratory를 통해 생성됨

--- a/torch/crossentoropy.ipynb
+++ b/torch/crossentoropy.ipynb
@@ -6,7 +6,7 @@
       "name": "crossentoropy.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMeYyU8H2dig07ov8kn2EDT",
+      "authorship_tag": "ABX9TyOXtTEPE9YwLRoSHFmJdfvp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,10 +42,21 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "import torch"
       ],
       "metadata": {
         "id": "IE1iVpF1myKa"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "PK0sTclioAtY"
       },
       "execution_count": null,
       "outputs": []
