--- a/torch/pytorch_oreilly/perceptron_sentiment_classifier.ipynb
+++ b/torch/pytorch_oreilly/perceptron_sentiment_classifier.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "de11d7e2",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "681cedd4",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "72aabec0",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "d0e60d00",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "dcbaadf7",
    "metadata": {},
    "outputs": [
@@ -148,7 +148,7 @@
        "negative  did i order the wrong thing ? or maybe it was ...  train"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "fff6ef6a",
    "metadata": {},
    "outputs": [],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "e95568a9",
    "metadata": {},
    "outputs": [
@@ -2178,7 +2178,7 @@
        "             ...})"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2189,7 +2189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "68d154ca",
    "metadata": {},
    "outputs": [],
@@ -2201,7 +2201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "33b43d28",
    "metadata": {},
    "outputs": [],
@@ -2231,7 +2231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "a528a5ec",
    "metadata": {},
    "outputs": [
@@ -2340,7 +2340,7 @@
        "9   . . . and they re closed . couldn t have happ...  train   NaN"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2351,7 +2351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "61c10b4e",
    "metadata": {},
    "outputs": [],
@@ -2376,8 +2376,235 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "ed9becdf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch.utils.data import Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "4c6ed7d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ReviewDataset(Dataset):\n",
+    "    def _init_(self, review_df, vectorizer):\n",
+    "        \"\"\"\n",
+    "        매개변수:\n",
+    "            review_df (pandas.DataFrame): 데이터셋\n",
+    "            vectorizer (ReviewVectorizer): ReviewVectorizer 객체\n",
+    "        \"\"\"\n",
+    "        self.review_df = review_df\n",
+    "        self._vectorizer = vectorizer\n",
+    "        \n",
+    "        self.train_df = self.review_df[self.review_df.split=='train']\n",
+    "        self.train_size = len(self.train_df)\n",
+    "        \n",
+    "        self.val_df - self.review_df[self.review_df.split=='val']\n",
+    "        self.validation_size = len(self.val_df)\n",
+    "        \n",
+    "        self.test_df - self.review_df[self.review_df.split=='test']\n",
+    "        self.test_size = len(self.test_df)\n",
+    "        \n",
+    "        self._lookup_dict = {'train': (self.train_df, self.train_size),\n",
+    "                             'val': (self.val_df, self.validation_size),\n",
+    "                             'test': (self.test_df, self.test_size)}\n",
+    "        \n",
+    "        self.set_split('train')\n",
+    "        \n",
+    "    @classmethod\n",
+    "    def load_dataset_and_make_vectorizer(cls, review_csv):\n",
+    "        \"\"\"\n",
+    "        데이터셋을 로드하고 새로운 Reviewvectorizer 객체를 만듭니다.\n",
+    "        \n",
+    "        parameters:\n",
+    "            review_csv (str): GoE499121 \n",
+    "        returns:\n",
+    "            ReviewDataset의 인스턴스\n",
+    "        \"\"\"\n",
+    "        review_df = pd.read_csv(review_csv)\n",
+    "        return cls(review_df, ReviewVectorizer.from_dataframe(review_df))\n",
+    "    \n",
+    "    def get_vectorizer(self):\n",
+    "        \"\"\"\n",
+    "        ReviewVectorizer 객체를 반환합니다.\n",
+    "        \"\"\"\n",
+    "        return self._vectorizer\n",
+    "    \n",
+    "    def set_split(self, split=\"train\"):\n",
+    "        \"\"\"\n",
+    "        데이터프레임에 있는 열을 사용해 분할 새트를 선택합니다.\n",
+    "        \n",
+    "        parameters:\n",
+    "            split (str): \"train\", \"val\", \"test\" 중 하나\n",
+    "        \"\"\"\n",
+    "        self._target_split = split\n",
+    "        self._target_df, self._target_size = self._lookup_dict[split]\n",
+    "    \n",
+    "    def _len_(self):\n",
+    "        return self._target_size\n",
+    "\n",
+    "    def _getitem_(self, index):\n",
+    "        \"\"\"\n",
+    "        파이토치 데이터셋의 주요 진입 메서드\n",
+    "        \n",
+    "        parameters:\n",
+    "            index (int): 데이터 포인트의 인덱스\n",
+    "        returns:\n",
+    "            데이터 포인트의 특성(x_data)과 레이블(y_target)로 이루어진 딕셔너리\n",
+    "        \"\"\"\n",
+    "        row = self._target_df.iloc[index]\n",
+    "        \n",
+    "        review_vector = self._vertorizer.vectorize(row.review)\n",
+    "        rating_index = self._vectorizer.rating_vocab.lookup_token(row.rating)\n",
+    "        \n",
+    "        return {'x_data': review_vector,\n",
+    "                'y_target': rating_index}\n",
+    "    \n",
+    "    def get_num_batches(self, batch_size):\n",
+    "        \"\"\"\n",
+    "        배치 크기가 주어지면 데이터셋으로 만들 수 있는 배치 개수를 반환합니다.\n",
+    "\n",
+    "        parameters:\n",
+    "            batch_size(int)\n",
+    "        returns:\n",
+    "            배치 개수\n",
+    "        \"\"\"\n",
+    "        return len(self) // batch_size"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f07f713",
+   "metadata": {},
+   "source": [
+    "# *Vocabulary*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "394518e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Vocabulary(object):\n",
+    "    \"\"\"\n",
+    "    매핑을 위해 백스트를 처리하고 어휘 사전을 만드는 클래스\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    def __init_(self, token_to_idx=None, add_unk=True, unk_token=\"<UNK>\"):\n",
+    "        \"\"\"\n",
+    "        parameters:\n",
+    "            token_to_idx (dict): 기존 토큰 - 인덱스 매핑 딕셔너리\n",
+    "            add_unk (bool): UNK 토큰을 추가할지 지정하는 플래그\n",
+    "            unk_token (str): Vocabulary에 추가할 UNK 토큰\n",
+    "        \"\"\"\n",
+    "\n",
+    "        if token_to_idx is None:\n",
+    "            token_to_idx = {}\n",
+    "    \n",
+    "        self._token_to_idx - token_to_idx\n",
+    "        self._idx_to_token = {idx: token for token, idx in self._token_to_idx.items()}\n",
+    "        \n",
+    "        self._add_unk = add_unk\n",
+    "        self._unk_token = unk_token\n",
+    "\n",
+    "        self.unk_index = -1\n",
+    "        \n",
+    "        if add_unk:\n",
+    "            self.unk_index = self.add_token(unk_token)\n",
+    "    \n",
+    "    def to_serializable(self):\n",
+    "        \"\"\"\n",
+    "        직렬화할 수 있는 딕셔너리를 반환합니다.\n",
+    "        \"\"\"\n",
+    "        return {'token_to_idx': self._token_to_idx,\n",
+    "                'add_unk': self._add_unk,\n",
+    "                'unk_token': self._unk_token}\n",
+    "\n",
+    "    @classmethod\n",
+    "    def from_serializable(cls, contents):\n",
+    "        \"\"\"\n",
+    "        직렬화된 딕셔너리에서 Vocabulary 객체를 만듭니다.\n",
+    "        \"\"\"\n",
+    "        return cls(**contents)\n",
+    "\n",
+    "    def add_token(self, token):\n",
+    "        \"\"\"토큰을 기반으로 매핑 딕셔너리를 업데이트합니다\n",
+    "        \n",
+    "        parameters:\n",
+    "            token (str): Vocabulary에 추가할 토큰\n",
+    "        returns:\n",
+    "            index (int): 토큰에 상응하는 정수\n",
+    "        \"\"\"\n",
+    "        if token in self._token_to_idx:\n",
+    "            index = self._token_to_idx[token]\n",
+    "        else:\n",
+    "            index = len(self._token_to_idx)\n",
+    "            self._token_to_idx[token] = index\n",
+    "            self._idx_to_token[index] = token\n",
+    "        return index\n",
+    "    \n",
+    "    def lookup_token(self, token):\n",
+    "        \"\"\"\n",
+    "        토큰에 대응하는 인덱스를 추출합니다.\n",
+    "        토큰이 없으면 UNK 인덱스를 반환합니다.\n",
+    "        \n",
+    "        parameters:\n",
+    "            token (str): 찾을 토큰\n",
+    "        returns:\n",
+    "            index (int): 토큰에 해당하는 인덱스\n",
+    "        note:\n",
+    "            UNK 토큰을 사용하려면 (Vocabulary에 추가하기 위해)\n",
+    "            unk_index 가 0보다 커야 합니다.\n",
+    "        \"\"\"\n",
+    "        if self.add_unk:\n",
+    "            return self._token_to_idx.get(token, self.unk_index)\n",
+    "        else:\n",
+    "            return self._token_to_idx[token]\n",
+    "    \n",
+    "    def lookup_index(self, index):\n",
+    "        \"\"\"\n",
+    "        인덱스에 해당하는 토큰을 반환합니다.\n",
+    "\n",
+    "        parameters:\n",
+    "            index (int): 찾을 인덱스\n",
+    "\n",
+    "        returns:\n",
+    "            token (str): 인덱스에 해당하는 토큰\n",
+    "\n",
+    "        error:\n",
+    "            KeyError: 인덱스가 Vocabulary에 없을 때 발생합니다.\n",
+    "        \"\"\"\n",
+    "\n",
+    "        if index not in self._idx_to_token:\n",
+    "            raise KeyError(\"Vocabulary에 인덱스(%d)가 없습니다.\" % index)\n",
+    "        return self.idx_to_token[index]\n",
+    "    \n",
+    "    def _str_(self):\n",
+    "        return \"<Vocabulary(size = %d)>\" % len(self)\n",
+    "\n",
+    "    def _len_(self):\n",
+    "        return len(self._token_to_idx)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2236163a",
+   "metadata": {},
+   "source": [
+    "# *Vectorizer*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fdce814e",
    "metadata": {},
    "outputs": [],
    "source": []
