퍼셉트론 추가

--- a/torch/pytorch_deeplearning/tensor_manipulation_2.ipynb
+++ b/torch/pytorch_deeplearning/tensor_manipulation_2.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "3ebdace7",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "c662a9dd",
    "metadata": {},
    "outputs": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "id": "82f6501a",
    "metadata": {},
    "outputs": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "id": "83e47f91",
    "metadata": {},
    "outputs": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "id": "788e7a33",
    "metadata": {},
    "outputs": [
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "id": "08a33809",
    "metadata": {},
    "outputs": [
@@ -288,6 +288,7 @@
       " \n",
       "tensor([[0., 1., 2., 3., 4., 5.]])\n",
       "torch.Size([1, 6])\n",
+      " \n",
       "tensor([[0.],\n",
       "        [1.],\n",
       "        [2.],\n",
@@ -295,6 +296,7 @@
       "        [4.],\n",
       "        [5.]])\n",
       "torch.Size([6, 1])\n",
+      " \n",
       "tensor([[0.],\n",
       "        [1.],\n",
       "        [2.],\n",
@@ -322,10 +324,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "693ccaf7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0., 1., 2.],\n",
+      "        [3., 4., 5.]])\n",
+      "torch.Size([2, 3])\n",
+      "tensor([[0., 1., 2., 3., 4., 5.]])\n",
+      "torch.Size([1, 6])\n"
+     ]
+    }
+   ],
    "source": [
     "print(ft.view(-1, 3))\n",
     "print(ft.view(-1, 3).shape)\n",
@@ -364,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "id": "529c8395",
    "metadata": {},
    "outputs": [
@@ -375,8 +389,11 @@
       "Tensor type() : torch.FloatTensor\n",
       " \n",
       "LongTensor type() : torch.LongTensor\n",
+      "tensor([0, 1, 2, 3, 4, 5])\n",
       "ft.long() type() : torch.LongTensor\n",
-      "ft.float() type() : torch.FloatTensor\n"
+      "tensor([0, 1, 2, 3, 4, 5])\n",
+      "ft.float() type() : torch.FloatTensor\n",
+      "tensor([0., 1., 2., 3., 4., 5.])\n"
      ]
     }
    ],
@@ -388,14 +405,280 @@
     "ft2 = ft.long()\n",
     "ft3 = ft.float()\n",
     "print(f\"LongTensor type() : {ft1.type()}\")\n",
+    "print(ft1)\n",
     "print(f\"ft.long() type() : {ft2.type()}\")\n",
-    "print(f\"ft.float() type() : {ft3.type()}\")"
+    "print(ft2)\n",
+    "print(f\"ft.float() type() : {ft3.type()}\")\n",
+    "print(ft3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3e19069",
+   "metadata": {},
+   "source": [
+    "# "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7237cdda",
+   "metadata": {},
+   "source": [
+    "### *Concatenate*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "b4e18a15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = torch.Tensor([[1, 2], [3, 4]])\n",
+    "y = torch.Tensor([[5, 6], [7, 8]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "cbcda3b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1., 2.],\n",
+      "        [3., 4.],\n",
+      "        [5., 6.],\n",
+      "        [7., 8.]])\n",
+      "tensor([[1., 2., 5., 6.],\n",
+      "        [3., 4., 7., 8.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(torch.cat([x, y], dim=0))  # 4 * 2 Tensor\n",
+    "print(torch.cat([x, y], dim=1))  # 2 * 4 Tensor"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8592ec3f",
+   "metadata": {},
+   "source": [
+    "# "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b59a591f",
+   "metadata": {},
+   "source": [
+    "### *Stacking*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "9ebf8ae2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = torch.FloatTensor([1, 4])\n",
+    "y = torch.FloatTensor([2, 5])\n",
+    "z = torch.FloatTensor([3, 6])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "1abbe411",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1., 4.],\n",
+      "        [2., 5.],\n",
+      "        [3., 6.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(torch.stack([x, y, z]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "9c03a8fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1., 4.],\n",
+      "        [2., 5.],\n",
+      "        [3., 6.]])\n",
+      "tensor([[1., 2., 3.],\n",
+      "        [4., 5., 6.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(torch.stack([x, y, z], dim=0))\n",
+    "print(torch.stack([x, y, z], dim=1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "46665a32",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1., 4.],\n",
+      "        [2., 5.],\n",
+      "        [3., 6.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(torch.cat([x.unsqueeze(0), y.unsqueeze(0), z.unsqueeze(0)], dim=0))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e68f4f9a",
+   "metadata": {},
+   "source": [
+    "# "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9deed29",
+   "metadata": {},
+   "source": [
+    "### *one_like, zero_like*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "1990f27f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0., 1., 2.],\n",
+      "        [2., 1., 0.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = torch.Tensor([[0, 1, 2], [2, 1, 0]])\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "190b72ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1., 1., 1.],\n",
+      "        [1., 1., 1.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(torch.ones_like(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "a917ae1d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0., 0., 0.],\n",
+      "        [0., 0., 0.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(torch.zeros_like(x))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e188a039",
+   "metadata": {},
+   "source": [
+    "# "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "774fdcd8",
+   "metadata": {},
+   "source": [
+    "### *In-place Operation*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "7ee219d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0., 2., 4.],\n",
+      "        [4., 2., 0.]])\n",
+      "tensor([[0., 1., 2.],\n",
+      "        [2., 1., 0.]])\n",
+      " \n",
+      "tensor([[0., 2., 4.],\n",
+      "        [4., 2., 0.]])\n",
+      "tensor([[0., 2., 4.],\n",
+      "        [4., 2., 0.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = torch.Tensor([[0, 1, 2], [2, 1, 0]])\n",
+    "print(x.mul(2.))\n",
+    "print(x)\n",
+    "print(\" \")\n",
+    "print(x.mul_(2.))\n",
+    "print(x)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e74f9640",
+   "id": "75efabc9",
    "metadata": {},
    "outputs": [],
    "source": []
