--- a/codingtest/data_structure/basic.ipynb
+++ b/codingtest/data_structure/basic.ipynb
@@ -182,12 +182,253 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f97a8e71",
+   "metadata": {},
+   "source": [
+    "# *재귀 함수*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f7e7b66",
+   "metadata": {},
+   "source": [
+    "자기 자신을 다시 호출하는 함수<br>\n",
+    "재귀 함수는 종료 조건을 항상 명시해야 한다."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "86090093",
+   "execution_count": 3,
+   "id": "7e90f7cd",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def recursive_function(i):\n",
+    "    # 100번째에서 종료\n",
+    "    if i == 100:\n",
+    "        return\n",
+    "    print(i, '번째 재귀 함수에서', i + 1, '번째 재귀 함수를 호출')\n",
+    "    recursive_function(i + 1)\n",
+    "    print(i, '번째 재귀 함수를 종료')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "7b8df92f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 번째 재귀 함수에서 2 번째 재귀 함수를 호출\n",
+      "2 번째 재귀 함수에서 3 번째 재귀 함수를 호출\n",
+      "3 번째 재귀 함수에서 4 번째 재귀 함수를 호출\n",
+      "4 번째 재귀 함수에서 5 번째 재귀 함수를 호출\n",
+      "5 번째 재귀 함수에서 6 번째 재귀 함수를 호출\n",
+      "6 번째 재귀 함수에서 7 번째 재귀 함수를 호출\n",
+      "7 번째 재귀 함수에서 8 번째 재귀 함수를 호출\n",
+      "8 번째 재귀 함수에서 9 번째 재귀 함수를 호출\n",
+      "9 번째 재귀 함수에서 10 번째 재귀 함수를 호출\n",
+      "10 번째 재귀 함수에서 11 번째 재귀 함수를 호출\n",
+      "11 번째 재귀 함수에서 12 번째 재귀 함수를 호출\n",
+      "12 번째 재귀 함수에서 13 번째 재귀 함수를 호출\n",
+      "13 번째 재귀 함수에서 14 번째 재귀 함수를 호출\n",
+      "14 번째 재귀 함수에서 15 번째 재귀 함수를 호출\n",
+      "15 번째 재귀 함수에서 16 번째 재귀 함수를 호출\n",
+      "16 번째 재귀 함수에서 17 번째 재귀 함수를 호출\n",
+      "17 번째 재귀 함수에서 18 번째 재귀 함수를 호출\n",
+      "18 번째 재귀 함수에서 19 번째 재귀 함수를 호출\n",
+      "19 번째 재귀 함수에서 20 번째 재귀 함수를 호출\n",
+      "20 번째 재귀 함수에서 21 번째 재귀 함수를 호출\n",
+      "21 번째 재귀 함수에서 22 번째 재귀 함수를 호출\n",
+      "22 번째 재귀 함수에서 23 번째 재귀 함수를 호출\n",
+      "23 번째 재귀 함수에서 24 번째 재귀 함수를 호출\n",
+      "24 번째 재귀 함수에서 25 번째 재귀 함수를 호출\n",
+      "25 번째 재귀 함수에서 26 번째 재귀 함수를 호출\n",
+      "26 번째 재귀 함수에서 27 번째 재귀 함수를 호출\n",
+      "27 번째 재귀 함수에서 28 번째 재귀 함수를 호출\n",
+      "28 번째 재귀 함수에서 29 번째 재귀 함수를 호출\n",
+      "29 번째 재귀 함수에서 30 번째 재귀 함수를 호출\n",
+      "30 번째 재귀 함수에서 31 번째 재귀 함수를 호출\n",
+      "31 번째 재귀 함수에서 32 번째 재귀 함수를 호출\n",
+      "32 번째 재귀 함수에서 33 번째 재귀 함수를 호출\n",
+      "33 번째 재귀 함수에서 34 번째 재귀 함수를 호출\n",
+      "34 번째 재귀 함수에서 35 번째 재귀 함수를 호출\n",
+      "35 번째 재귀 함수에서 36 번째 재귀 함수를 호출\n",
+      "36 번째 재귀 함수에서 37 번째 재귀 함수를 호출\n",
+      "37 번째 재귀 함수에서 38 번째 재귀 함수를 호출\n",
+      "38 번째 재귀 함수에서 39 번째 재귀 함수를 호출\n",
+      "39 번째 재귀 함수에서 40 번째 재귀 함수를 호출\n",
+      "40 번째 재귀 함수에서 41 번째 재귀 함수를 호출\n",
+      "41 번째 재귀 함수에서 42 번째 재귀 함수를 호출\n",
+      "42 번째 재귀 함수에서 43 번째 재귀 함수를 호출\n",
+      "43 번째 재귀 함수에서 44 번째 재귀 함수를 호출\n",
+      "44 번째 재귀 함수에서 45 번째 재귀 함수를 호출\n",
+      "45 번째 재귀 함수에서 46 번째 재귀 함수를 호출\n",
+      "46 번째 재귀 함수에서 47 번째 재귀 함수를 호출\n",
+      "47 번째 재귀 함수에서 48 번째 재귀 함수를 호출\n",
+      "48 번째 재귀 함수에서 49 번째 재귀 함수를 호출\n",
+      "49 번째 재귀 함수에서 50 번째 재귀 함수를 호출\n",
+      "50 번째 재귀 함수에서 51 번째 재귀 함수를 호출\n",
+      "51 번째 재귀 함수에서 52 번째 재귀 함수를 호출\n",
+      "52 번째 재귀 함수에서 53 번째 재귀 함수를 호출\n",
+      "53 번째 재귀 함수에서 54 번째 재귀 함수를 호출\n",
+      "54 번째 재귀 함수에서 55 번째 재귀 함수를 호출\n",
+      "55 번째 재귀 함수에서 56 번째 재귀 함수를 호출\n",
+      "56 번째 재귀 함수에서 57 번째 재귀 함수를 호출\n",
+      "57 번째 재귀 함수에서 58 번째 재귀 함수를 호출\n",
+      "58 번째 재귀 함수에서 59 번째 재귀 함수를 호출\n",
+      "59 번째 재귀 함수에서 60 번째 재귀 함수를 호출\n",
+      "60 번째 재귀 함수에서 61 번째 재귀 함수를 호출\n",
+      "61 번째 재귀 함수에서 62 번째 재귀 함수를 호출\n",
+      "62 번째 재귀 함수에서 63 번째 재귀 함수를 호출\n",
+      "63 번째 재귀 함수에서 64 번째 재귀 함수를 호출\n",
+      "64 번째 재귀 함수에서 65 번째 재귀 함수를 호출\n",
+      "65 번째 재귀 함수에서 66 번째 재귀 함수를 호출\n",
+      "66 번째 재귀 함수에서 67 번째 재귀 함수를 호출\n",
+      "67 번째 재귀 함수에서 68 번째 재귀 함수를 호출\n",
+      "68 번째 재귀 함수에서 69 번째 재귀 함수를 호출\n",
+      "69 번째 재귀 함수에서 70 번째 재귀 함수를 호출\n",
+      "70 번째 재귀 함수에서 71 번째 재귀 함수를 호출\n",
+      "71 번째 재귀 함수에서 72 번째 재귀 함수를 호출\n",
+      "72 번째 재귀 함수에서 73 번째 재귀 함수를 호출\n",
+      "73 번째 재귀 함수에서 74 번째 재귀 함수를 호출\n",
+      "74 번째 재귀 함수에서 75 번째 재귀 함수를 호출\n",
+      "75 번째 재귀 함수에서 76 번째 재귀 함수를 호출\n",
+      "76 번째 재귀 함수에서 77 번째 재귀 함수를 호출\n",
+      "77 번째 재귀 함수에서 78 번째 재귀 함수를 호출\n",
+      "78 번째 재귀 함수에서 79 번째 재귀 함수를 호출\n",
+      "79 번째 재귀 함수에서 80 번째 재귀 함수를 호출\n",
+      "80 번째 재귀 함수에서 81 번째 재귀 함수를 호출\n",
+      "81 번째 재귀 함수에서 82 번째 재귀 함수를 호출\n",
+      "82 번째 재귀 함수에서 83 번째 재귀 함수를 호출\n",
+      "83 번째 재귀 함수에서 84 번째 재귀 함수를 호출\n",
+      "84 번째 재귀 함수에서 85 번째 재귀 함수를 호출\n",
+      "85 번째 재귀 함수에서 86 번째 재귀 함수를 호출\n",
+      "86 번째 재귀 함수에서 87 번째 재귀 함수를 호출\n",
+      "87 번째 재귀 함수에서 88 번째 재귀 함수를 호출\n",
+      "88 번째 재귀 함수에서 89 번째 재귀 함수를 호출\n",
+      "89 번째 재귀 함수에서 90 번째 재귀 함수를 호출\n",
+      "90 번째 재귀 함수에서 91 번째 재귀 함수를 호출\n",
+      "91 번째 재귀 함수에서 92 번째 재귀 함수를 호출\n",
+      "92 번째 재귀 함수에서 93 번째 재귀 함수를 호출\n",
+      "93 번째 재귀 함수에서 94 번째 재귀 함수를 호출\n",
+      "94 번째 재귀 함수에서 95 번째 재귀 함수를 호출\n",
+      "95 번째 재귀 함수에서 96 번째 재귀 함수를 호출\n",
+      "96 번째 재귀 함수에서 97 번째 재귀 함수를 호출\n",
+      "97 번째 재귀 함수에서 98 번째 재귀 함수를 호출\n",
+      "98 번째 재귀 함수에서 99 번째 재귀 함수를 호출\n",
+      "99 번째 재귀 함수에서 100 번째 재귀 함수를 호출\n",
+      "99 번째 재귀 함수를 종료\n",
+      "98 번째 재귀 함수를 종료\n",
+      "97 번째 재귀 함수를 종료\n",
+      "96 번째 재귀 함수를 종료\n",
+      "95 번째 재귀 함수를 종료\n",
+      "94 번째 재귀 함수를 종료\n",
+      "93 번째 재귀 함수를 종료\n",
+      "92 번째 재귀 함수를 종료\n",
+      "91 번째 재귀 함수를 종료\n",
+      "90 번째 재귀 함수를 종료\n",
+      "89 번째 재귀 함수를 종료\n",
+      "88 번째 재귀 함수를 종료\n",
+      "87 번째 재귀 함수를 종료\n",
+      "86 번째 재귀 함수를 종료\n",
+      "85 번째 재귀 함수를 종료\n",
+      "84 번째 재귀 함수를 종료\n",
+      "83 번째 재귀 함수를 종료\n",
+      "82 번째 재귀 함수를 종료\n",
+      "81 번째 재귀 함수를 종료\n",
+      "80 번째 재귀 함수를 종료\n",
+      "79 번째 재귀 함수를 종료\n",
+      "78 번째 재귀 함수를 종료\n",
+      "77 번째 재귀 함수를 종료\n",
+      "76 번째 재귀 함수를 종료\n",
+      "75 번째 재귀 함수를 종료\n",
+      "74 번째 재귀 함수를 종료\n",
+      "73 번째 재귀 함수를 종료\n",
+      "72 번째 재귀 함수를 종료\n",
+      "71 번째 재귀 함수를 종료\n",
+      "70 번째 재귀 함수를 종료\n",
+      "69 번째 재귀 함수를 종료\n",
+      "68 번째 재귀 함수를 종료\n",
+      "67 번째 재귀 함수를 종료\n",
+      "66 번째 재귀 함수를 종료\n",
+      "65 번째 재귀 함수를 종료\n",
+      "64 번째 재귀 함수를 종료\n",
+      "63 번째 재귀 함수를 종료\n",
+      "62 번째 재귀 함수를 종료\n",
+      "61 번째 재귀 함수를 종료\n",
+      "60 번째 재귀 함수를 종료\n",
+      "59 번째 재귀 함수를 종료\n",
+      "58 번째 재귀 함수를 종료\n",
+      "57 번째 재귀 함수를 종료\n",
+      "56 번째 재귀 함수를 종료\n",
+      "55 번째 재귀 함수를 종료\n",
+      "54 번째 재귀 함수를 종료\n",
+      "53 번째 재귀 함수를 종료\n",
+      "52 번째 재귀 함수를 종료\n",
+      "51 번째 재귀 함수를 종료\n",
+      "50 번째 재귀 함수를 종료\n",
+      "49 번째 재귀 함수를 종료\n",
+      "48 번째 재귀 함수를 종료\n",
+      "47 번째 재귀 함수를 종료\n",
+      "46 번째 재귀 함수를 종료\n",
+      "45 번째 재귀 함수를 종료\n",
+      "44 번째 재귀 함수를 종료\n",
+      "43 번째 재귀 함수를 종료\n",
+      "42 번째 재귀 함수를 종료\n",
+      "41 번째 재귀 함수를 종료\n",
+      "40 번째 재귀 함수를 종료\n",
+      "39 번째 재귀 함수를 종료\n",
+      "38 번째 재귀 함수를 종료\n",
+      "37 번째 재귀 함수를 종료\n",
+      "36 번째 재귀 함수를 종료\n",
+      "35 번째 재귀 함수를 종료\n",
+      "34 번째 재귀 함수를 종료\n",
+      "33 번째 재귀 함수를 종료\n",
+      "32 번째 재귀 함수를 종료\n",
+      "31 번째 재귀 함수를 종료\n",
+      "30 번째 재귀 함수를 종료\n",
+      "29 번째 재귀 함수를 종료\n",
+      "28 번째 재귀 함수를 종료\n",
+      "27 번째 재귀 함수를 종료\n",
+      "26 번째 재귀 함수를 종료\n",
+      "25 번째 재귀 함수를 종료\n",
+      "24 번째 재귀 함수를 종료\n",
+      "23 번째 재귀 함수를 종료\n",
+      "22 번째 재귀 함수를 종료\n",
+      "21 번째 재귀 함수를 종료\n",
+      "20 번째 재귀 함수를 종료\n",
+      "19 번째 재귀 함수를 종료\n",
+      "18 번째 재귀 함수를 종료\n",
+      "17 번째 재귀 함수를 종료\n",
+      "16 번째 재귀 함수를 종료\n",
+      "15 번째 재귀 함수를 종료\n",
+      "14 번째 재귀 함수를 종료\n",
+      "13 번째 재귀 함수를 종료\n",
+      "12 번째 재귀 함수를 종료\n",
+      "11 번째 재귀 함수를 종료\n",
+      "10 번째 재귀 함수를 종료\n",
+      "9 번째 재귀 함수를 종료\n",
+      "8 번째 재귀 함수를 종료\n",
+      "7 번째 재귀 함수를 종료\n",
+      "6 번째 재귀 함수를 종료\n",
+      "5 번째 재귀 함수를 종료\n",
+      "4 번째 재귀 함수를 종료\n",
+      "3 번째 재귀 함수를 종료\n",
+      "2 번째 재귀 함수를 종료\n",
+      "1 번째 재귀 함수를 종료\n"
+     ]
+    }
+   ],
+   "source": [
+    "recursive_function(1)\n",
+    "# 내부적으로 스택 자료구조와 동일"
+   ]
   }
  ],
  "metadata": {
