--- a/codingtest/data_structure/BFS.ipynb
+++ b/codingtest/data_structure/BFS.ipynb
@@ -292,8 +292,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dx = [-1, 1, 0, 0]\n",
-    "dy = [0, 0, -1, 1]"
+    "root = [[-1, 0], [1, 0], [0, -1], [0, 1]]"
    ]
   },
   {
@@ -323,11 +322,11 @@
     "        \n",
     "        # 현재 위치에서 상하좌우 위치 확인\n",
     "        for i in range(4):\n",
-    "            nx = x + dx[i]\n",
-    "            ny = y + dy[i]\n",
+    "            nx = x + root[i][0]\n",
+    "            ny = y + root[i][1]\n",
     "            \n",
     "            # 미로 찾기 공간을 벗어난 경우 무시\n",
-    "            if nx < 0 or nx >= n or ny < 0 or ny >= m:\n",
+    "            if nx < 0 or nx >= n or ny < 0 or ny >= m:=\n",
     "                continue\n",
     "            # 벽인 경우 무시\n",
     "            if graph[nx][ny] == 0:\n",
@@ -337,6 +336,7 @@
     "                graph[nx][ny] = graph[x][y] + 1\n",
     "                queue.append((nx, ny))\n",
     "    # 가장 오른쪽 아래까지의 최단 거리 반환\n",
+    "    print(graph)\n",
     "    return graph[n - 1][m - 1]"
    ]
   },
@@ -350,6 +350,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[[3, 0, 5, 0, 7, 0], [2, 3, 4, 5, 6, 7], [0, 0, 0, 0, 0, 8], [14, 13, 12, 11, 10, 9], [15, 14, 13, 12, 11, 10]]\n",
       "10\n"
      ]
     }
@@ -357,6 +358,14 @@
    "source": [
     "print(bfs(0, 0))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ade4224",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
