--- a/codingtest/data_structure/test/BFS_test.ipynb
+++ b/codingtest/data_structure/test/BFS_test.ipynb
@@ -158,6 +158,7 @@
     "    while queue:\n",
     "        x, y = queue.popleft()\n",
     "        \n",
+    "        \n",
     "        # 상하좌우\n",
     "        for i in range(4):\n",
     "            nx = x + root[i][0]\n",
@@ -216,7 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "bc4a7dd5",
+   "id": "10929f17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,84 +233,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "4d0efef1",
+   "execution_count": null,
+   "id": "a9bd565d",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from collections import deque"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "a44474bd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def bfs(x, y):\n",
-    "    root = [[-1, 0], [1, 0], [0, -1], [0, 1]]\n",
-    "    \n",
-    "    if graph[x][y] == 0:\n",
-    "        \n",
-    "        queue = deque()\n",
-    "        queue.append((x, y))\n",
-    "        \n",
-    "        print(queue)\n",
-    "        # 방문 지점 표시\n",
-    "        graph[x][y] = 1\n",
-    "\n",
-    "\n",
-    "        while True:\n",
-    "            if not queue:\n",
-    "                return 1\n",
-    "\n",
-    "            x, y = queue.popleft()\n",
-    "\n",
-    "            for i in range(4):\n",
-    "                nx = x + root[i][0]\n",
-    "                ny = y + root[i][1]\n",
-    "\n",
-    "                # 범위 내 확인\n",
-    "                if nx < 0 or nx >= n or ny < 0 or ny >= m:\n",
-    "                    continue\n",
-    "                # 방문한 곳인지 확인\n",
-    "                if graph[nx][ny] == 1:\n",
-    "                    continue\n",
-    "                if graph[nx][ny] == 0:\n",
-    "                    queue.append([nx, ny])\n",
-    "                    graph[nx][ny] == 1\n",
-    "\n",
-    "    return 0"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3de41a73",
+   "id": "7303887e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "deque([(0, 0)])\n"
-     ]
-    }
-   ],
-   "source": [
-    "result = 0\n",
-    "for row in range(len(graph)):\n",
-    "    for col in range(len(graph[row])):\n",
-    "        result += bfs(row, col)\n",
-    "\n",
-    "print(f\"result : {result}\")"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a59b8043",
+   "id": "60667442",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -317,140 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "62ee51a3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "n, m = 4, 5\n",
-    "\n",
-    "graph = [\n",
-    "    [0, 0, 1, 1, 0],\n",
-    "    [0, 0, 0, 1, 1],\n",
-    "    [1, 1, 1, 1, 1],\n",
-    "    [0, 0, 0, 0, 0]\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "c40e9c3d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from collections import deque\n",
-    "\n",
-    "def bfs(row, col):\n",
-    "    \"\"\"col, row : 시작 지점에 대한 행 열\"\"\"\n",
-    "      \n",
-    "    # 입력된 값이 0일 때, 즉 얼음을 만들 수 있는 공간일 때\n",
-    "    if graph[row][col] == 0:\n",
-    "        # 큐 생성\n",
-    "        queue = deque()\n",
-    "        queue.append((row, col))\n",
-    "        \n",
-    "        # 방문 지점 표시\n",
-    "        graph[row][col] = 1\n",
-    "\n",
-    "        # queue가 없어질 때까지 반복 후 없어지면 값을 1 추가하고 break\n",
-    "        while True:\n",
-    "            if not queue:\n",
-    "                return 1\n",
-    "            row, col = queue.popleft()\n",
-    "            # 상하좌우로 이동하며 이동한 장소가 0일 떄 큐에 추가\n",
-    "            for dx, dy in [[0, -1], [0, 1], [-1, 0], [1, 0]]:\n",
-    "                # 이동한 장소가 주어진 범위 이내인 지 확인\n",
-    "                if 0 <= row+dy <= n-1 and 0 <= col+dx <= m-1:  \n",
-    "                    if graph[row+dy][col+dx] == 0:\n",
-    "                        queue.append([row+dy, col+dx])\n",
-    "                        # 방문 지점 표시\n",
-    "                        graph[row+dy][col+dx] = 1\n",
-    "    return 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "d84d9c7f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "result : 3\n"
-     ]
-    }
-   ],
-   "source": [
-    "result = 0\n",
-    "for row in range(len(graph)):\n",
-    "    for col in range(len(graph[row])):\n",
-    "        result += bfs(row, col)\n",
-    "\n",
-    "print(f\"result : {result}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6a2a3e17",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "64ffe111",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9527c027",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2a1d377b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "92dc43c9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b7638727",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "53f520bb",
-   "metadata": {},
-   "source": [
-    "# "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "e201ca57",
+   "id": "e08a2ac7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,23 +277,14 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3b878495",
+   "id": "72841ad5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from collections import deque"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "42be928d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from collections import deque\n",
+    "\n",
     "def bfs(x, y):\n",
     "    root = [[-1, 0], [1, 0], [0, -1], [0, 1]]\n",
-    "    \n",
     "    queue = deque()\n",
     "    queue.append((x, y))\n",
     "    \n",
@@ -493,57 +292,45 @@
     "        x, y = queue.popleft()\n",
     "        \n",
     "        for i in range(4):\n",
-    "            nx = x + root[i][0]\n",
-    "            ny = y + root[i][1]\n",
+    "            dx = x + root[i][0]\n",
+    "            dy = y + root[i][1]\n",
     "            \n",
-    "            if nx < 0 or nx >= n or ny < 0 or ny >= m:\n",
+    "            if dx < 0 or dx >= n or dy < 0 or dy >= m:\n",
     "                continue\n",
-    "            if graph[nx][ny] == 0:\n",
+    "            if graph[dx][dy] == 0:\n",
     "                continue\n",
-    "            if graph[nx][ny] == 1:\n",
-    "                graph[nx][ny] = graph[x][y] + 1\n",
-    "                queue.append((nx, ny))\n",
+    "                \n",
+    "            if graph[dx][dy] == 1:\n",
+    "                graph[dx][dy] = graph[x][y] + 1\n",
+    "                queue.append((dx, dy))\n",
     "    return graph[n - 1][m - 1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "8797f97e",
+   "execution_count": 3,
+   "id": "0fadcc7e",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10\n"
-     ]
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(bfs(0, 0))"
+    "bfs(0, 0)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8c7fa76",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e52a4858",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "36eb9336",
+   "id": "aa686f00",
    "metadata": {},
    "outputs": [],
    "source": []
